# mcp-servers

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  docker.yml  fmt.yml  test.yml
crates/ltm-mcp/: .env.example  Cargo.toml  Dockerfile  README.md
crates/ltm-mcp/migrations/: 20260706000001_create_memories.sql  20260707000001_add_pgvector_and_repo.sql  20260707000002_optimize_embeddings.sql  20260707135038_rename_repo_to_scope.sql  20260707145400_init.sql
crates/ltm-mcp/src/: auth.rs  config.rs  main.rs  server.rs
crates/ltm-mcp/src/embedding/: mod.rs
crates/ltm-mcp/src/memory/: mod.rs  postgres.rs  store.rs  types.rs
crates/ltm-mcp/src/tools/: mod.rs
crates/mcp-common/: Cargo.toml
crates/mcp-common/src/: error.rs
