[workspace]
members = ["crates/mcp-common", "crates/ltm-mcp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KagChi"]
license = "Apache-2.0"
repository = "https://github.com/KagChi/mcp-servers"

[workspace.dependencies]
# MCP
rmcp = { version = "2.1", features = ["server", "transport-streamable-http-server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
